--- a/src/index.css
+++ b/src/index.css
@@ -37,9 +37,17 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: transparent;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-image: linear-gradient(154deg, #00fff3 0%, #7e00ff 100%);
+  background-position: 50% 50%;
+  background-size: 100% 100%;
+  background-repeat: repeat;
+  background-attachment: scroll;
+  background-origin: padding-box;
+  background-clip: border-box;
+  color: white;
 }
 
 button:hover {
