--- a/src/components/animation/animation.module.scss
+++ b/src/components/animation/animation.module.scss
@@ -1,2 +1,8 @@
 .root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  width: 50%;
+  padding: 0% 10%;
 }
