--- a/src/components/intro/intro.module.scss
+++ b/src/components/intro/intro.module.scss
@@ -4,14 +4,34 @@
   flex-direction: column;
   align-items: center;
   justify-items: center;
+  align-content: center;
+  justify-content: center;
 }
 .title {
   font-size: 3rem;
   font-weight: 700;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  line-height: 1;
+  padding: 0.5rem 0px 0.5px;
+  margin: 0px;
 }
 .subtitle {
   font-weight: 500;
   font-size: 1.5rem;
+}
+.p {
+  font-size: 1rem;
+  text-align: center;
+  padding: 0.25rem;
+}
+.line {
+  margin: 1rem;
+}
+.path-line {
+  stroke-width: 3;
+}
+
+.cta {
+  margin: 1rem 0rem;
+  font-size: 0.8rem;
+  color: white;
 }
