--- a/src/components/intro/intro.module.scss
+++ b/src/components/intro/intro.module.scss
@@ -14,7 +14,7 @@
   padding: 0.5rem 0px 0.5px;
   margin: 0px;
 }
-.subtitle {
+.h3 {
   font-weight: 500;
   font-size: 1.5rem;
 }
@@ -35,3 +35,4 @@
   font-size: 0.8rem;
   color: white;
 }
+
