--- a/src/components/animation/animation.module.scss
+++ b/src/components/animation/animation.module.scss
@@ -1,8 +1,11 @@
 .root {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-items: center;
+  align-content: center;
+  justify-content: center;
   width: 50%;
-  padding: 0% 10%;
+}
+.hand {
+  max-width: 36rem;
 }
