--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,8 @@
 .App {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 0rem 10%;
+  font-family: Poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 .logo {
