--- a/src/components/intro/intro.module.scss
+++ b/src/components/intro/intro.module.scss
@@ -1,5 +1,5 @@
 .root {
-  padding: 6rem 0rem 0rem;
+  padding: 0rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,10 +29,14 @@
 .path-line {
   stroke-width: 3;
 }
+.intro-title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .cta {
   margin: 1rem 0rem;
   font-size: 0.8rem;
   color: white;
 }
-
