--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,2 +1,29 @@
 .root {
 }
+.logo {
+  font-size: 1em;
+  color: #111111;
+}
+.links {
+  list-style-type: none;
+  display: flex;
+  gap: 3em;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0%;
+  padding: 2rem 0rem;
+  background-color: #ffffff;
+  position: sticky;
+  top: 0px;
+  z-index: 50;
+}
+
+@media screen and (max-width: 720px) {
+  .nav {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
